--- a/index.html
+++ b/index.html
@@ -222,9 +222,25 @@ body {
   cursor: pointer;
 }
 
+
+
+/* Floating tap effect */
+.tap-effect {
+  position: absolute;
+  color: #4facfe;
+  font-size: 22px;
+  font-weight: bold;
+  animation: floatUp 0.6s ease-out forwards;
+  pointer-events: none;
+  user-select: none;
+}
+@keyframes floatUp {
+  0% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(-60px); opacity: 0; }
+}
 </style>
 </head>
-<body>
+<body><div id="tapOverlay" style="position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:9999;"></div>
 <div style="position: absolute; top: 10px; right: 12px; z-index: 1001;">
 <button id="themeToggle" onclick="toggleTheme()" style="font-size: 22px; background: none; border: none; cursor: pointer;">🌗</button>
 </div>
@@ -578,5 +594,16 @@ window.addEventListener("DOMContentLoaded", () => {
     loadProgress();
   }
 });
+
+
+function createTapEffect(x, y) {
+  const el = document.createElement("div");
+  el.className = "tap-effect";
+  el.textContent = "+1";
+  el.style.left = `${x - 10}px`;
+  el.style.top = `${y - 20}px`;
+  document.getElementById("tapOverlay").appendChild(el);
+  setTimeout(() => el.remove(), 600);
+}
 </script></body>
 </html>
