--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="shark-wrapper">
       <img src="shark.png" alt="Tap Shark" class="shark-image" onclick="handleTap()" id="tapImage" />
       <div class="token-counter">
-        <img src="coin_icon_small.png" alt="Coin Icon" />
+        <img src="coin_icon_small.png" alt="Coin Icon" style="width: 20px; height: 20px;" />
         <span id="profileTokens">0</span> монеток
       </div>
     </div>
@@ -216,12 +216,25 @@
       </div>
     </div>
 
-    <nav>
-      <button class="active"><i class="fa-solid fa-user"></i><span>Профиль</span></button>
-      <button><i class="fa-solid fa-gamepad"></i><span>Игра</span></button>
-      <button><i class="fa-solid fa-store"></i><span>Магазин</span></button>
-      <button><i class="fa-solid fa-list-check"></i><span>Задания</span></button>
-    </nav>
+    <nav>$1</nav>
+
+<div id="shop" style="margin: 2rem 1rem; background: var(--card-bg); border-radius: 1.5rem; padding: 1rem; box-shadow: 0 6px 16px rgba(0,0,0,0.08);">
+  <h2 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--primary);">🛍 Магазин</h2>
+  <div class="shop-items" style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
+    <div class="shop-item" style="text-align: center;">
+      <img src="shark.png" alt="Default Shark" style="width: 72px; height: 72px; border-radius: 12px;" />
+      <button onclick="buySkin('default', 0)" style="margin-top: 0.5rem;">Выбрать</button>
+    </div>
+    <div class="shop-item" style="text-align: center;">
+      <img src="shark_skin2.png" alt="Leopard Shark" style="width: 72px; height: 72px; border-radius: 12px;" />
+      <button onclick="buySkin('skin2', 1000)" style="margin-top: 0.5rem;">Купить / Выбрать</button>
+    </div>
+    <div class="shop-item" style="text-align: center;">
+      <img src="shark_skin1.png" alt="Gold Shark" style="width: 72px; height: 72px; border-radius: 12px;" />
+      <button onclick="buySkin('skin3', 500)" style="margin-top: 0.5rem;">Купить / Выбрать</button>
+    </div>
+  </div>
+</div>
 
     <div id="leaderboard" style="margin: 2rem 1rem; background: var(--card-bg); border-radius: 1.5rem; padding: 1rem; box-shadow: 0 6px 16px rgba(0,0,0,0.08);">
       <h2 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--primary);">🏆 Лидерборд</h2>
@@ -360,6 +373,18 @@ function loadLeaderboard() {
 }
 
 loadLeaderboard();
+function buySkin(skinId, price) {
+  if (!userId) return;
+  if (userData.tokens >= price || price === 0) {
+    userData.tokens -= price;
+    userData.selectedSkin = skinId;
+    document.getElementById("tapImage").src = skinId === 'skin2' ? 'shark_skin2.png' : skinId === 'skin3' ? 'shark_skin1.png' : 'shark.png';
+    document.getElementById("profileTokens").textContent = userData.tokens;
+    saveProgress();
+  } else {
+    alert("Недостаточно монет!");
+  }
+}
 </script>
   </div>
 </body>
