--- a/index.html
+++ b/index.html
@@ -275,16 +275,17 @@ loadTelegram();
       }
 
       function updateXPDisplay() {
-        const levelEl = document.getElementById("profileLevel");
-        if (levelEl) levelEl.textContent = `Ур. ${level}`;
-        const bar = document.getElementById("xpBar");
-        if (bar) {
-  const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
-  let max = limits.find(l => userData.tokens < l) || 10000;
-  let min = limits[limits.indexOf(max) - 1] || 0;
-  let percent = ((userData.tokens - min) / (max - min)) * 100;
-  percent = Math.min(100, Math.max(0, percent));
-  bar.style.width = `${percent}%`;
+  const levelEl = document.getElementById("profileLevel");
+  if (levelEl) levelEl.textContent = `Монет: ${userData.tokens}`;
+  const bar = document.getElementById("xpBar");
+  if (bar) {
+    const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
+    let max = limits.find(l => userData.tokens < l) || 10000;
+    let min = limits[limits.indexOf(max) - 1] || 0;
+    let percent = ((userData.tokens - min) / (max - min)) * 100;
+    percent = Math.min(100, Math.max(0, percent));
+    bar.style.width = `${percent}%`;
+  }
 }
       }
 
@@ -407,3 +408,4 @@ function buySkin(skinId, price) {
   </div>
 </body>
 </html>
+
