--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       --subtext: #6c7787;
       --border: #e0e6ed;
     }
-
     body {
       margin: 0;
       font-family: 'Luckiest Guy', cursive;
@@ -28,7 +27,6 @@
       overflow-x: hidden;
       -webkit-font-smoothing: antialiased;
     }
-
     header {
       background: none;
       color: var(--primary);
@@ -38,7 +36,6 @@
       font-family: 'Luckiest Guy', cursive;
       text-shadow: -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, 2px 2px 0 #fff;
     }
-
     .token-counter {
       margin-top: 8px;
       font-size: 1.25rem;
@@ -52,7 +49,6 @@
       align-items: center;
       gap: 0.5rem;
     }
-
     .shark-wrapper {
       position: relative;
       display: flex;
@@ -60,7 +56,6 @@
       align-items: center;
       z-index: 2;
     }
-
     .shark-image {
       width: 160px;
       height: 160px;
@@ -71,7 +66,6 @@
       object-fit: cover;
       cursor: pointer;
     }
-
     .shark-gallery {
       margin: 1rem auto;
       padding: 0 1rem;
@@ -81,7 +75,6 @@
       gap: 0.75rem;
       scroll-snap-type: x mandatory;
     }
-
     .shark-gallery img {
       width: 52px;
       height: 52px;
@@ -92,7 +85,6 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
       flex-shrink: 0;
     }
-
     .profile-card {
       background: var(--card-bg);
       border-radius: 2rem;
@@ -104,7 +96,6 @@
       gap: 1rem;
       align-items: center;
     }
-
     .profile-card img {
       width: 64px;
       height: 64px;
@@ -112,23 +103,19 @@
       object-fit: cover;
       border: 2px solid var(--accent);
     }
-
     .profile-info {
       display: flex;
       flex-direction: column;
       width: 100%;
     }
-
     .profile-info .name {
       font-weight: 600;
       font-size: 1.2rem;
     }
-
     .profile-info .sub {
       font-size: 0.9rem;
       color: var(--subtext);
     }
-
     .xp-bar {
       width: 100%;
       height: 8px;
@@ -137,14 +124,12 @@
       overflow: hidden;
       margin-top: 0.25rem;
     }
-
     .xp-fill {
       height: 100%;
       width: 0%;
       background: linear-gradient(to right, var(--primary), var(--accent));
       transition: width 0.3s ease;
     }
-
     nav {
       position: fixed;
       bottom: 0;
@@ -156,7 +141,6 @@
       box-shadow: 0 -6px 20px rgba(0,0,0,0.06);
       backdrop-filter: blur(12px);
     }
-
     nav button {
       flex: 1;
       background: none;
@@ -168,16 +152,13 @@
       align-items: center;
       gap: 0.25rem;
     }
-
     nav button i {
       font-size: 1.3rem;
     }
-
     nav button.active {
       color: var(--primary);
       font-weight: 700;
     }
-
     .app-wrapper {
       position: relative;
       z-index: 1;
@@ -186,184 +167,212 @@
 </head>
 <body>
   <div class="app-wrapper">
-    <header>SHARK TAPPER</header>
+  <header>SHARK TAPPER</header>
 
-    <div id="game" class="shark-wrapper" style="display:none;">
-      <img src="shark.png" alt="Tap Shark" class="shark-image" onclick="handleTap()" id="tapImage" />
-      <div class="token-counter">
-        <img src="coin_icon_small.png" alt="Coin Icon" style="width: 20px; height: 20px;" />
-        <span id="profileTokens">0</span> монеток
-      </div>
+  <div id="tabs">
+
+  <div class="shark-wrapper" style="margin-top: 1rem; display: flex; flex-direction: column; align-items: center; gap: 0.75rem;">
+  <div class="shark-tap-container" style="position: relative;">
+    <div class="token-counter" style="position: absolute; top: -18px; left: 50%; transform: translateX(-50%); z-index: 10;">
+      <img src="https://sinobu1.github.io/shark-tapper/coin_icon_small.png" alt="Coin Icon" style="width: 20px; height: 20px;" />
+      <span id="profileTokens">0</span> coins
     </div>
-
-    <div id="gallery" class="shark-gallery" style="display:none;">$1</div>
-
-    <div id="profile" class="profile-card">
-      <img src="https://placehold.co/64x64" alt="Avatar" id="profileAvatar">
-      <div class="profile-info">
-        <span class="name" id="profileName">Имя игрока</span>
-        <span class="sub" id="profileLevel">Ур. 1</span>
-        <div class="xp-bar">
-          <div class="xp-fill" id="xpBar"></div>
-        </div>
-        <span class="sub" id="profileJoin">С нами с 2025</span>
-      </div>
+    <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Tap Shark" class="shark-image" onclick="handleTap()" id="tapImage" style="width: 160px; height: 160px; border-radius: 50%; border: 4px solid var(--accent); background: var(--card-bg); box-shadow: 0 12px 32px rgba(0,0,0,0.15); object-fit: cover; cursor: pointer; display: block; margin: 0 auto;" />
+  </div>
+    <div class="shark-gallery">
+      <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Shark 1" onclick="setSkin('default')" />
+      <img src="https://sinobu1.github.io/shark-tapper/shark_skin1.png" alt="Gold Shark" onclick="setSkin('skin3')" />
+      <img src="https://sinobu1.github.io/shark-tapper/shark_skin2.png" alt="Leopard Shark" onclick="setSkin('skin2')" />
     </div>
+  </div>
+  <div class="profile-card" style="max-width: 90%; width: 100%;">
+    <img src="https://placehold.co/64x64" alt="Avatar" id="profileAvatar">
+    <div class="profile-info">
+      <span class="name" id="profileName">Игрок</span>
+      <span class="sub" id="profileLevel">Coins: 0</span>
+      <div class="xp-bar">
+        <div class="xp-fill" id="xpBar"></div>
+      </div>
+      <span class="sub" id="profileJoin">С нами с 2025</span>
+    </div>
+  </div>
+</div>
+    </div>
+  
 
-    <nav>
-  <button class="active" onclick="showTab('profile')"><i class="fa-solid fa-user"></i><span>Профиль</span></button>
-  <button onclick="showTab('game')"><i class="fa-solid fa-gamepad"></i><span>Игра</span></button>
-  <button onclick="showTab('shop')"><i class="fa-solid fa-store"></i><span>Магазин</span></button>
-  <button onclick="showTab('leaderboard')"><i class="fa-solid fa-list-check"></i><span>Топ</span></button>
+
+<nav>
+  <button class="active" onclick="showTab('home')">
+    <i class="fa-solid fa-gamepad"></i><span>Game</span>
+  </button>
+  <button onclick="showTab('quests')">
+    <i class="fa-solid fa-list-check"></i><span>Задания</span>
+  </button>
+  <button onclick="showTab('shop')">
+    <i class="fa-solid fa-store"></i><span>Магазин</span>
+  </button>
+  <button onclick="showTab('leaderboard')">
+    <i class="fa-solid fa-ranking-star"></i><span>Топ</span>
+  </button>
 </nav>
-
-<div id="shop" style="display:none;">
-  <h2>🛍 Магазин</h2>
-  <p style="text-align:center; color: var(--subtext);">Скоро доступно</p>
+<div id="quests" style="display:none; padding: 1rem; text-align: center;">
+  <h2>📝 Задания</h2>
+  <p style="color: var(--subtext);">Скоро появятся увлекательные задания!</p>
 </div>
 
-<div id="leaderboard" style="display:none;"> style="margin: 2rem 1rem; background: var(--card-bg); border-radius: 1.5rem; padding: 1rem; box-shadow: 0 6px 16px rgba(0,0,0,0.08);">
-      <h2 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--primary);">🏆 Лидерборд</h2>
-      <ul id="leaderboardList" style="list-style: none; padding: 0; margin: 0;">
-        <li style="text-align:center; color: var(--subtext);">Загрузка...</li>
-      </ul>
-    </div>
-
-    <script>
-// Основные переменные
-const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
-let userId = null;
-let userData = {
-  username: "Игрок",
-  avatar: "https://placehold.co/64x64",
-  tokens: 0
-};
-
-function handleTap() {
-  const counter = document.getElementById("profileTokens");
-  userData.tokens++;
-  counter.textContent = userData.tokens;
-  updateXPDisplay();
-  saveProgress();
-}
-
-function updateXPDisplay() {
-  const levelEl = document.getElementById("profileLevel");
-  if (levelEl) levelEl.textContent = `Монет: ${userData.tokens}`;
-  const bar = document.getElementById("xpBar");
-  if (bar) {
-    const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
-    let max = limits.find(l => userData.tokens < l) || 10000;
-    let min = limits[limits.indexOf(max) - 1] || 0;
-    let percent = ((userData.tokens - min) / (max - min)) * 100;
-    percent = Math.min(100, Math.max(0, percent));
-    bar.style.width = `${percent}%`;
-  }
-}
-
-function showTab(tabId) {
-  document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
-  document.querySelectorAll('nav button').forEach(btn => {
-    if (btn.textContent.toLowerCase().includes(tabId)) btn.classList.add('active');
-  });
-  ['profile', 'game', 'shop', 'leaderboard', 'gallery'].forEach(id => {
-    const el = document.getElementById(id);
-    if (el) el.style.display = (id === tabId) ? 'block' : 'none';
-  });
-}
-
-function saveProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`, {
-    method: "PUT",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      balance: userData.tokens,
-      first_name: userData.username,
-      photo_url: userData.avatar
-    })
-  });
-}
-
-function loadProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`)
-    .then(res => res.json())
-    .then(data => {
-      if (data) {
-        userData.tokens = data.balance || 0;
-        userData.username = data.first_name || userData.username;
-        userData.avatar = data.photo_url || userData.avatar;
-      }
-      updateProfile();
-    });
-}
-
-function updateProfile() {
-  document.getElementById("profileName").textContent = userData.username;
-  document.getElementById("profileAvatar").src = userData.avatar;
-  document.getElementById("profileTokens").textContent = userData.tokens;
-  updateXPDisplay();
-}
-
-function loadUserData() {
-  loadProgress();
-  updateProfile();
-}
-
-function loadTelegram() {
-  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    const user = Telegram.WebApp.initDataUnsafe?.user || {};
-    userId = user?.id?.toString();
-    userData.username = user?.first_name || user?.username || 'Игрок';
-    userData.avatar = user?.photo_url || (user?.username ? `https://t.me/i/userpic/320/${user.username}.jpg` : 'https://via.placeholder.com/72');
-    if (userId) loadProgress();
-  }
-}
-
-function loadLeaderboard() {
-  fetch(`${dbUrl}/users.json`)
-    .then(res => res.json())
-    .then(data => {
-      const list = document.getElementById("leaderboardList");
-      if (!data || Object.keys(data).length === 0) return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Пока пусто</li>';
-
-      const sorted = Object.entries(data)
-        .sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0))
-        .slice(0, 10);
-
-      list.innerHTML = sorted.map(([id, user], i) => `
-        <li style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
-          <span style="font-weight: bold; color: var(--primary);">#${i + 1}</span>
-          <img src="${user.photo_url || 'https://placehold.co/32x32'}" style="width: 32px; height: 32px; border-radius: 50%; border: 2px solid var(--accent); object-fit: cover;">
-          <span>${user.first_name || 'Аноним'}</span>
-          <span style="margin-left:auto; color: var(--subtext);">${user.balance || 0} 💰</span>
-        </li>`).join("");
-    });
-}
-
-function buySkin(skinId, price) {
-  if (!userId) return;
-  if (userData.tokens >= price || price === 0) {
-    userData.tokens -= price;
-    userData.selectedSkin = skinId;
-    const tapImage = document.getElementById("tapImage");
-    if (tapImage) tapImage.src = skinId === 'skin2' ? 'shark_skin2.png' : skinId === 'skin3' ? 'shark_skin1.png' : 'shark.png';
-    document.getElementById("profileTokens").textContent = userData.tokens;
-    saveProgress();
-  } else {
-    alert("Недостаточно монет!");
-  }
-}
-
-// Инициализация
-loadTelegram();
-showTab('game');
-loadUserData();
-loadLeaderboard();
-</script>
+  <div id="shop" style="display:none;">
+    <h2>🛍 Магазин</h2>
+    <p style="text-align:center; color: var(--subtext);">Скоро доступно</p>
   </div>
+
+
+ <!-- close #tabs -->
+    <ul id="leaderboardList" style="list-style: none; padding: 0; margin: 0;">
+      <li style="text-align:center; color: var(--subtext);">Загрузка...</li>
+    </ul>
+  
+
+  <!-- Move script to end of body to ensure showTab is defined -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+      let userId = null;
+      let userData = {
+        username: "Игрок",
+        avatar: "https://placehold.co/64x64",
+        tokens: 0
+      };
+
+      window.handleTap = function() {
+        const counter = document.getElementById("profileTokens");
+        userData.tokens++;
+        counter.textContent = userData.tokens;
+        updateXPDisplay();
+        saveProgress();
+      }
+
+      function updateXPDisplay() {
+        const levelEl = document.getElementById("profileLevel");
+        if (levelEl) levelEl.textContent = `Coins: ${userData.tokens}`;
+        const bar = document.getElementById("xpBar");
+        if (bar) {
+          const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
+          let max = limits.find(l => userData.tokens < l) || 10000;
+          let min = limits[limits.indexOf(max) - 1] || 0;
+          let percent = ((userData.tokens - min) / (max - min)) * 100;
+          percent = Math.min(100, Math.max(0, percent));
+          bar.style.width = `${percent}%`;
+        }
+      }
+
+      window.showTab = function(tabId) {
+        document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
+        document.querySelectorAll('nav button').forEach(btn => {
+          if (btn.textContent.toLowerCase().includes(tabId)) btn.classList.add('active');
+        });
+        ['home', 'quests', 'shop', 'leaderboard'].forEach(id => {
+          const el = document.getElementById(id);
+          if (el) el.style.display = (id === tabId) ? 'block' : 'none';
+        });
+      }
+
+      function saveProgress() {
+        if (!userId) return;
+        fetch(`${dbUrl}/users/${userId}.json`, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            balance: userData.tokens,
+            first_name: userData.username,
+            photo_url: userData.avatar
+          })
+        });
+      }
+
+      function loadProgress() {
+        if (!userId) return;
+        fetch(`${dbUrl}/users/${userId}.json`)
+          .then(res => res.json())
+          .then(data => {
+            if (data) {
+              userData.tokens = data.balance || 0;
+              userData.username = data.first_name || userData.username;
+              userData.avatar = data.photo_url || userData.avatar;
+            }
+            updateProfile();
+          });
+      }
+
+      function updateProfile() {
+        document.getElementById("profileName").textContent = userData.username;
+        document.getElementById("profileAvatar").src = userData.avatar;
+        document.getElementById("profileTokens").textContent = userData.tokens;
+        updateXPDisplay();
+      }
+
+      function loadUserData() {
+        loadProgress();
+        updateProfile();
+      }
+
+      function loadTelegram() {
+        if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+          Telegram.WebApp.ready();
+          Telegram.WebApp.expand();
+          const user = Telegram.WebApp.initDataUnsafe?.user || {};
+          userId = user?.id?.toString();
+          userData.username = user?.first_name || user?.username || 'Игрок';
+          userData.avatar = user?.photo_url || (user?.username ? `https://t.me/i/userpic/320/${user.username}.jpg` : 'https://via.placeholder.com/72');
+          if (userId) loadProgress();
+        }
+      }
+
+      function loadLeaderboard() {
+        fetch(`${dbUrl}/users.json`)
+          .then(res => res.json())
+          .then(data => {
+            const list = document.getElementById("leaderboardList");
+            if (!data || Object.keys(data).length === 0) return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Пока пусто</li>';
+            const sorted = Object.entries(data)
+              .sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0))
+              .slice(0, 10);
+            list.innerHTML = sorted.map(([id, user], i) => `
+              <li style="margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem;">
+                <span style="font-weight: bold; color: var(--primary);">#${i + 1}</span>
+                <img src="${user.photo_url || 'https://placehold.co/32x32'}" style="width: 32px; height: 32px; border-radius: 50%; border: 2px solid var(--accent); object-fit: cover;">
+                <span>${user.first_name || 'Аноним'}</span>
+                <span style="margin-left:auto; color: var(--subtext);">${user.balance || 0} 💰</span>
+              </li>`).join("");
+          });
+      }
+
+      window.buySkin = function(skinId, price) {
+        if (!userId) return;
+        if (userData.tokens >= price || price === 0) {
+          userData.tokens -= price;
+          userData.selectedSkin = skinId;
+          setSkin(skinId);
+          document.getElementById("profileTokens").textContent = userData.tokens;
+          saveProgress();
+        } else {
+          alert("Недостаточно монет!");
+        }
+      }
+
+      window.setSkin = function(skinId) {
+        const tapImage = document.getElementById("tapImage");
+        if (!tapImage) return;
+        if (skinId === 'skin2') tapImage.src = 'shark_skin2.png';
+        else if (skinId === 'skin3') tapImage.src = 'shark_skin1.png';
+        else tapImage.src = 'shark.png';
+        userData.selectedSkin = skinId;
+      }
+
+      loadTelegram();
+      showTab('home');
+      loadUserData();
+      loadLeaderboard();
+    });
+  </script>
 </body>
 </html>
